# Sneaker

./: .gitignore  README.en.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  hotkeys.rs  lib.rs  main.rs  settings.rs  state.rs  storage.rs  tasks.rs  tray.rs  win_util.rs
src/components/: BottomBar.svelte  TitleBar.svelte
src/lib/: api.ts  store.ts
src/views/: Lock.svelte  Main.svelte  Settings.svelte  Tasks.svelte
